--- a/main.tex
+++ b/main.tex
@@ -43,14 +43,15 @@
 
 \input{src/title}
 
-% set up the page style for the "intro" pages
-\pagestyle{plain}
+
 
 %% --------------------------------------------------------------
 %% |                       Acknowledgments                      |
 %% --------------------------------------------------------------
-
+\pagestyle{plain}
+\setcounter{page}{1}
 \conditionalClearPage
+% set up the page style for the "intro" pages
 
 \input{src/acknowledgments.tex}
 
