--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -2,7 +2,7 @@
 
 \chapter{Introduction\label{chap:introduction}}
 
-Modern software development is characterized by high demands for quality, robustness, and maintainability of applications. In this context, testing has become an integral part of the development process, with unit tests playing a key role in ensuring the proper functioning of individual system components. Testing is not merely about detecting bugs, but also to provide confidence that the software meets its functional and non-functional requirements and can withstand changes throughout its lifecycle. Although unit testing brings significant benefits, its effectiveness is often limited by the complexity of input data preparation.
+Modern software development is characterized by high demands for quality, robustness, and maintainability of applications. In this context, testing has become an essential part of the development process, with unit tests playing a key role in ensuring the proper functioning of individual system components. Testing is not merely about detecting bugs, but also to provide confidence that the software meets its functional and non-functional requirements and can withstand changes throughout its lifecycle. Although unit testing brings significant benefits, its effectiveness is often limited by the complexity of input data preparation.
 
 The preparation of test data represents one of the most significant challenges in the writing of tests. For simple scenarios, the required data can often be created directly within the test. However, for more complex scenarios, data preparation may require significant time and effort. This process can involve initializing complex structures, simulating dependencies, communicating with services, or generating realistic test scenarios. The result is tests that are often complicated, less readable, and harder to maintain. Such challenges can make testing a burden for developers rather than a facilitator of their work.
 
