--- a/content/state_of_art.tex
+++ b/content/state_of_art.tex
@@ -2,12 +2,13 @@
 
 \chapter{State of the Art\label{chap:state_of_the_art}}
 
-\todo{}
+\todo{} \cite{Emmi2007Jul} \cite{Arcuri2020Jul}\cite{Emmi2007Jul}
 
 \section{Current Software Testing Practices}
 \todo{}
 
 \section{Existing Technologies}
+Existing Technologies section provides an introduction to several frameworks and tools that can be beneficial for the preparation of test data within the C\# programming environment.
 
 \subsection{IntelliTest Framework}
 IntelliTest\footnote{\href{https://learn.microsoft.com/en-us/visualstudio/test/intellitest-manual/?view=vs-2022}{https://learn.microsoft.com/en-us/visualstudio/test/intellitest-manual/?view=vs-2022}} is a tool for automated test generation integrated into Microsoft Visual Studio. IntelliTest leverages dynamic symbolic execution to analyze the code under test and produce parameterized unit tests. IntelliTest methodology systematically explores various execution paths in the code, covering edge cases and unexpected scenarios.
