--- a/main.bib
+++ b/main.bib
@@ -33,3 +33,150 @@
   volume = {18},
   year = {2008},
 }
+
+
+
+@INPROCEEDINGS{Chays2000
+,	author	= {Chays, David and J.Weyuker, Elaine}
+,	title	= {A Framework for Testing Database Applications}
+,	booktitle	= {A Framework for Testing Database Applications}
+,	year	= {2000}
+,	pages	= {147--157}
+}
+
+@article{Arcuri2020Jul,
+	author = {Arcuri, Andrea and Galeotti, Juan P.},
+	title = {{Handling SQL Databases in Automated System Test Generation}},
+	journal = {ACM Trans. Softw. Eng. Methodol.},
+	volume = {29},
+	number = {4},
+	pages = {1--31},
+	year = {2020},
+	month = jul,
+	issn = {1049-331X},
+	publisher = {Association for Computing Machinery},
+	doi = {10.1145/3391533}
+}
+
+@incollection{Chays2000Aug,
+	author = {Chays, David and Dan, Saikat and Frankl, Phyllis G. and Vokolos, Filippos I. and Weyuker, Elaine J.},
+	title = {{A framework for testing database applications}},
+	booktitle = {{ACM SIGSOFT Software Engineering Notes}},
+	volume = {25},
+	number = {5},
+	pages = {147--157},
+	year = {2000},
+	month = aug,
+	issn = {0163-5948},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	doi = {10.1145/347324.348954}
+}
+
+@incollection{Tang2010Mar,
+	author = {Tang, Joe and Lo, Eric},
+	title = {{A lightweight framework for testing database applications}},
+	booktitle = {{ACM Conferences}},
+	pages = {1632--1637},
+	year = {2010},
+	month = mar,
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	doi = {10.1145/1774088.1774441}
+}
+
+@incollection{Emmi2007Jul,
+	author = {Emmi, Michael and Majumdar, Rupak and Sen, Koushik},
+	title = {{Dynamic test input generation for database applications}},
+	booktitle = {{ACM Conferences}},
+	pages = {151--162},
+	year = {2007},
+	month = jul,
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	doi = {10.1145/1273463.1273484}
+}
+
+@article{Chan1999,
+	author = {Chan, Man-yee and Cheung, S.},
+	title = {{Testing Database Applications with SQL Semantics}},
+	journal = {International Symposium on Cooperative Database Systems for Advanced Applications},
+	year = {1999},
+	url = {https://www.semanticscholar.org/paper/Testing-Database-Applications-with-SQL-Semantics-Chan-Cheung/d87efc4e12c4f013f8b41f2500a309147cc9206c}
+}
+
+@article{Chays2000Sep,
+	author = {Chays, David and Dan, Saikat and Frankl, Phyllis G. and Vokolos, Filippos I. and Weber, Elaine J.},
+	title = {{A framework for testing database applications}},
+	journal = {ACM SIGSOFT Software Engineering Notes},
+	volume = {25},
+	number = {5},
+	pages = {147--157},
+	year = {2000},
+	month = sep,
+	issn = {0163-5948},
+	publisher = {Association for Computing Machinery},
+	doi = {10.1145/347636.348954}
+}
+
+@book{Tziatzios2019,
+	author = {Tziatzios, Dimitrios},
+	title = {{Model-based Testing for SQL Databases}},
+	journal = {DIVA},
+	year = {2019}
+}
+
+@misc{Eriksson2014,
+	author = {Eriksson, O.},
+	title = {{A Modular Framework Approach to Regression Testing of SQL}},
+	year = {2014},
+	date = {2014},
+	urldate = {2025-01-01},
+	note = {[Online; accessed 1. Jan. 2025]},
+	url = {https://www.semanticscholar.org/paper/A-Modular-Framework-Approach-to-Regression-Testing-Eriksson/5f119560d196e5d23cbe529f46ccdfc463f9a29c}
+}
+
+@article{Lo2010Jan,
+	author = {Lo, Eric and Binnig, Carsten and Kossmann, Donald and {\ifmmode\ddot{O}\else\"{O}\fi}zsu, M. Tamer and Hon, Wing-Kai},
+	title = {{A framework for testing DBMS features.}},
+	journal = {VLDB Journal},
+	volume = {19},
+	pages = {203--230},
+	year = {2010},
+	month = jan,
+	date = {2010-01-01},
+	urldate = {2025-01-01},
+	issn = {1066-8888},
+	publisher = {Springer Nature},
+	url = {https://www.researchgate.net/publication/220473620_A_framework_for_testing_DBMS_features}
+}
+
+@article{Christensen2006Dec,
+	author = {Christensen, Claus A. and Gundersborg, Steen and de Linde, Kristian and Torp, Kristian},
+	title = {{A Unit-Test Framework for Database Applications}},
+	journal = {ResearchGate},
+	pages = {11--20},
+	year = {2006},
+	month = dec,
+	date = {2006-12-01},
+	urldate = {2025-01-01},
+	issn = {1098-8068},
+	doi = {10.1109/IDEAS.2006.7}
+}
+
+@article{Haftmann2007Jan,
+	author = {Haftmann, Florian and Kossmann, Donald and Lo, Eric},
+	title = {{A framework for efficient regression tests on database applications}},
+	journal = {VLDB Journal},
+	volume = {16},
+	number = {1},
+	pages = {145--164},
+	year = {2007},
+	month = jan,
+	date = {2007-01-01},
+	urldate = {2025-01-01},
+	issn = {0949-877X},
+	publisher = {Springer-Verlag},
+	doi = {10.1007/s00778-006-0028-8},
+	keywords = {Database Management}
+}
